# the.blog

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.production.yml  docker-compose.yml  manage.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: check_build_and_run.yml  deploy.yml
authn/: views.py
clickers/: views.py
comments/: forms.py  models.py  views.py
common/epub/: epub.py
common/markdown/plugins/: text_block.py
etc/nginx/: default  vas3k.blog.conf
frontend/html/: donate.html  error.html  layout.html  message.html  subscribe.html
frontend/html/comments/: comment-form.html  comment-list.html  comment.html  form.html  inline-comment-form.html  inline-comment-list.html  inline-comment.html
frontend/html/common/: contacts.html  favicon.html  header.html  post_footer.html  post_related.html  post_subscribe.html  rss.html  scripts.html
frontend/html/emails/: layout.html  new_post.html  opt_in.html
frontend/html/index/: about.html  posts3.html  projects.html  stream.html
frontend/html/posts/: edit.html
frontend/html/posts/cards/: aspect.html  book.html  feed.html  horizontal.html  vertical.html
frontend/html/posts/full/: books.html  feed.html  layout.html
frontend/html/users/: login.html  post_access_denied.html  profile.html
frontend/static/css/: base.css  cards.css  donates.css  layout.css  posts.css
frontend/static/js/: main.js
heynik_blog/: asgi.py  exceptions.py  posts.py  settings.py  urls.py  wsgi.py
inside/: views.py
inside/management/commands/: send_new_post.py
inside/senders/: email.py
notifications/signals/: comments.py
notifications/telegram/: bot.py
posts/: admin.py  forms.py  models.py  openlibrary.py  renderers.py  views.py
posts/management/commands/: migrate_old_posts.py
posts/migrations/: 0003_add_newsletter_sent_at.py
posts/templatetags/: books.py  posts.py  text_filters.py
rss/: feeds.py
tests/: test_smoke.py
users/: forms.py  models.py
vas3k_blog/: posts.py  settings.py  urls.py
(+6 files in other folders)
