[tool.poetry]
name = "vas3k_blog"
version = "0.1.0"
description = ""
authors = ["Nik Ray <hi@nikilyushk.in>"]

[tool.poetry.dependencies]
python = "^3.10"
packaging = "24.0"
Django = "^4.1.13"
python-slugify = "^7.0.0"
psycopg2-binary = "^2.9.5"
beautifulsoup4 = "^4.11.1"
mistune = "3.0.0rc4"
maxminddb-geolite2 = "^2018.703"
python-telegram-bot = "^13.15"
requests = "^2.32.0"
Pillow = "^10.3.0"
django-debug-toolbar = "^3.8.1"
premailer = "^3.10.0"
lxml = "^4.9.2"
PyJWT = "^2.6.0"
cryptography = "^42.0.4"
gunicorn = "^22.0.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sentry-sdk = "^1.12.1"
Authlib = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
