[tool.poetry]
name = "heynik_blog"
version = "0.1.0"
description = ""
authors = ["Nik Ray <hi@nikilyushk.in>"]

[tool.poetry.dependencies]
python = "^3.10"
packaging = ">=24.1"
Django = "^4.2.29"
python-slugify = "^8.0.0"
psycopg2-binary = "^2.9.5"
beautifulsoup4 = "^4.11.1"
mistune = "3.0.0rc4"
maxminddb-geolite2 = "^2018.703"
requests = "^2.32.4"
#Pillow = "^10.3.0"
Pillow = "^12.1.1"
#django-debug-toolbar = "^3.8.1"
django-debug-toolbar = "^5.0.1"
premailer = "^3.10.0"
lxml = "^4.9.2"
PyJWT = "^2.12.0"
cryptography = "^46.0.5"
gunicorn = "^22.0.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sentry-sdk = "^2.8.0"
Authlib = "^1.6.9"
urllib3 = "^2.6.3"
tzdata = "^2024.1"
sqlparse = "^0.5.4"
h11 = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-django (>=4.12.0,<5.0.0)"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "heynik_blog.settings"
python_files = ["test_*.py", "*_tests.py", "tests.py"]
addopts = "--reuse-db -ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]
